Add video background and update styles

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
   <!-- HERO SECTION with logo -->
   <section class="hero">
+    <video autoplay muted loop playsinline class="background-video">
+      <source src="video/homepage 1.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+  
     <div class="hero-content">
       <img src="images/logo.JPG" alt="Magic Keys Logo" class="logo" />
       <h1>Magic Keys</h1>
       <p>Little hands. Big music.</p>
       <a href="#info" class="cta-button" id="startJourney">Start Your Journey</a>
     </div>
-    <div class="scroll-arrow">
-        ↓
-    </div>      
+    
+    <div class="scroll-arrow">↓</div>
   </section>
-
+  
   <!-- quote section -->
   <section id="info" class="quote-section">
     <blockquote>
