Your update message

--- a/index.html
+++ b/index.html
@@ -31,10 +31,30 @@
       <p>
         "We are a music studio devoted to nurturing young pianists. With years of teaching experience, we guide little hands to create big, beautiful music. Here, every lesson is an adventure — sparked by curiosity, shaped by creativity, and filled with the joy of discovery."
       </p>
-      <p class="quote-author"><strong>—— Carolyn Wei, Founder & Head of Musical Adventures</strong></p>
+      <p class="quote-author"><strong>—— Carolyn, Founder & Head of Musical Adventures</strong></p>
     </blockquote>
   </section>
   
+  <!-- Teacher section -->
+  <section class="testimonials">
+    <div class="testimonial">
+      <img src="images/yourtutor1.jpg" alt="Tutor 1">
+      <div>
+        <p>"I'm passionate about helping students learn and grow through music!"</p>
+        <strong>Gerard</strong><br>
+        <span>Piano Tutor</span>
+      </div>
+    </div>
+  
+    <div class="testimonial">
+      <img src="images/yourtutor2.jpg" alt="Tutor 2">
+      <div>
+        <p>"Every lesson is a joy. I love teaching beginners and seeing their excitement."</p>
+        <strong>Millie</strong><br>
+        <span>Piano Tutor</span>
+      </div>
+    </div>
+  </section>
   
   
   <!-- Info Section 1 -->
@@ -47,7 +67,7 @@
       <img src="images/info_1.jpg" alt="Piano Lessons" />
     </div>
   </section>
-  
+
 <!-- Info Section 2 -->
   <section class="info alt">
     <div class="text">
@@ -71,20 +91,61 @@
   </section>
 
 
-  <!-- CTA SECTION -->
-  <section class="cta-bar">
-    <h3>Ready to unlock your music potential?</h3>
-    <a href="#contact" class="cta-button">👉 Book a Free Trial 👈</a>
-  </section>
+<!-- CTA SECTION -->
+<section class="cta-bar">
+  <h3>Ready to unlock your music potential?</h3>
+  <button class="cta-button" id="openModal">👉 Book a Free Trial 👈</button>
+</section>
+
+
 
   <!-- FOOTER -->
   <footer>
     <p>© 2025 Magic Keys. All rights reserved.</p>
   </footer>
 
+
+<!-- MODAL FORM for new customers -->
+<!-- MODAL FORM -->
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <span class="close-button" id="closeModal">&times;</span>
+
+    <!-- Logo added here -->
+    <img src="images/logo.JPG" alt="Magic Keys Logo" class="modal-logo" />
+
+    <h3>Book a Free Trial</h3>
+    <form action="https://formspree.io/f/xqalapjn" method="POST" class="contact-form">
+      <div class="form-group">
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" name="name" required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+
+      <div class="form-group">
+        <label for="message">Your Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+      </div>
+
+      <button type="submit" class="cta-button">Send</button>
+    </form>
+  </div>
+</div>
+
+
+
+
 <script src="script.js"></script>
   
 </body>
+
 </html>
+
+
+
 
 
