Update tutor cards layout
Improved spacing, typography, and bullet styling

Adjusted HTML and CSS for professional appearance

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Magic Keys - Piano Lessons</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -117,10 +118,36 @@
   </section>
 
 
+  <section class="location-section">
+    <div class="location-text">
+      <h2>Classroom Location</h2>
+      <h3>CHERRYBROOK</h3>
+      <p>Shop 10<br>
+      Cherrybrook Village Shopping Centre, NSW 2126<br>
+      (Next to the food court entrance)</p>
+  
+      <h4>Contact Info</h4>
+      <p>Phone: 0410 843 612<br>
+      Email: <a href="mailto:cherrybrook@theonepiano.com.au">cherrybrook@theonepiano.com.au</a></p>
+    </div>
+  
+    <div class="location-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.144905913907!2d151.04223037563314!3d-33.72270077326066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12a7d25481c2e9%3A0xf0452e8373685d78!2sCherrybrook%20Village!5e0!3m2!1sen!2sau!4v1721449850000!5m2!1sen!2sau"
+        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </section>
+  
+  
+
+  
+
 <!-- CTA SECTION -->
 <section class="cta-bar">
   <h3>Ready to unlock your music potential?</h3>
-  <button class="cta-button" id="openModal">👉 Book a Free Trial 👈</button>
+  <button class="cta-button" id="openModal">👉 Book a Trial 👈</button>
 </section>
 
 
@@ -140,7 +167,7 @@
     <!-- Logo added here -->
     <img src="images/logo.JPG" alt="Magic Keys Logo" class="modal-logo" />
 
-    <h3>Book a Free Trial</h3>
+    <h3>Book a trial today! 50% off first lesson!</h3>
     <form action="https://formspree.io/f/xqalapjn" method="POST" class="contact-form">
       <div class="form-group">
         <label for="name">Your Name:</label>
