Update tutor cards layout
Improved spacing, typography, and bullet styling

Adjusted HTML and CSS for professional appearance

--- a/index.html
+++ b/index.html
@@ -163,20 +163,48 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <span class="close-button" id="closeModal">&times;</span>
-
-    <!-- Logo added here -->
     <img src="images/logo.JPG" alt="Magic Keys Logo" class="modal-logo" />
 
     <h3>Book a trial today! 50% off first lesson!</h3>
     <form action="https://formspree.io/f/xqalapjn" method="POST" class="contact-form">
       <div class="form-group">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required />
+        <label for="fullName">Your Name:</label>
+        <input type="text" id="fullName" name="fullName" required />
+      </div>
+
+      <div class="form-group">
+        <label for="contact">Contact number:</label>
+        <input type="text" id="contact" name="contact" required />
       </div>
 
       <div class="form-group">
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required />
+      </div>
+
+      <div class="form-group">
+        <label for="childName">Child's Name:</label>
+        <input type="text" id="childName" name="childName" required />
+      </div>
+
+      <div class="form-group">
+        <label for="age">Age:</label>
+        <input type="text" id="age" name="age" required />
+      </div>
+
+      <div class="form-group">
+        <label for="experience">Years of experience:</label>
+        <input type="text" id="experience" name="experience" required />
+      </div>
+
+      <div class="form-group">
+        <label for="schedule">Preferred lesson day and time:</label>
+        <input type="text" id="schedule" name="schedule" required />
+      </div>
+
+      <div class="form-group">
+        <label for="referral">How did you find us?</label>
+        <input type="text" id="referral" name="referral" required />
       </div>
 
       <div class="form-group">
@@ -188,6 +216,7 @@
     </form>
   </div>
 </div>
+
 
 
 
