Update image format

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>Whether you’re 6 or 60, we make music accessible and fun.</p>
       </div>
     <div class="image">
-      <img src="images/info_2.JPG" alt="Microphone" />
+      <img src="images/info_2.jpg" alt="Microphone" />
     </div>
   </section>
 
@@ -117,7 +117,7 @@
       <p>Students are invited to participate in regular concerts to showcase their progress and build confidence.</p>
     </div>
     <div class="image">
-      <img src="images/info_3.JPG" alt="Concert Performance" />
+      <img src="images/info_3.jpg" alt="Concert Performance" />
     </div>
   </section>
 
