Update image format

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       
       <div class="tutor-info">
         <p class="testimonial-name">Carolyn Wei</p>
-        <p class="testimonial-role">Piano Tutor</p>
+        <p class="testimonial-role">Head Tutor</p>
         
         <ul>
           <li><strong>LRSM diploma</strong> in piano performance, ABRSM, London</li>
